--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html ng-app="LunchCheck" lang="en">
   <head>
     <title>Lunch Checker</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular.min.js"></script>
     <style>
       .message { font-size: 1.3em; font-weight: bold; }
     </style>
@@ -22,11 +23,11 @@
             <button class="btn btn-default" type="submit" ng-click="checkLunchItems()">Check If Too Much</button>
           </div>
           <div class="form-group message">
-            <div class="alert alert-{{noticeType}}"" id="message">{{message}}</div>
+            <div class="alert alert-{{noticeType}}" id="message">{{message}}</div>
           </div>
         </form>
       </div>
    </div>
-
+   <script src="js/app.js"></script>
 </body>
 </html>
